[tool.poetry]
name = "leads-mvp"
version = "0.1.0"
description = ""
authors = ["Syed Tamzid <syed.tamzid@peopledatalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
requests = "^2.28.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
